Fixed text alignment

--- a/style.css
+++ b/style.css
@@ -22,5 +22,5 @@
 }
 
 .bubble > .description {
-	
+	text-align: left;
 }
